plugins {
    id 'java'
}

group 'de.zettsystems'
version '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_14

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
    testImplementation group: 'junit', name: 'junit', version: '4.13'
}
